--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="Brn-oR-11M" id="j0L-kB-J1f"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="hBw-dr-F1Y"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="hBw-dr-F1Y">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Z4Y-eX-OsE">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="Brn-oR-11M" id="Oxz-Ji-pZ3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3NN-2X-gWG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
